--- a/TerrainViewer/terrain/terrain/terrain.vcxproj.filters
+++ b/TerrainViewer/terrain/terrain/terrain.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Terrain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stb.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Terrain.vert">
@@ -35,5 +38,16 @@
     <None Include="Terrain.geom">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="skybox.frag">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="skybox.vert">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="stb_image.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
