--- a/TerrainViewer/terrain/terrain/terrain.vcxproj
+++ b/TerrainViewer/terrain/terrain/terrain.vcxproj
@@ -137,14 +137,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="stb.cpp" />
     <ClCompile Include="Terrain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="skybox.frag" />
+    <None Include="skybox.vert" />
     <None Include="Terrain.cont" />
     <None Include="Terrain.frag" />
     <None Include="Terrain.geom" />
     <None Include="Terrain.vert" />
     <None Include="Terrain.eval" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
